# ruf4

./: .gitignore  Cargo.toml  LICENSE  LICENSE-EDIT  ReadMe.md  ReleaseFlow.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/lsh/src/: runtime.rs
crates/lsh/src/compiler/: backend.rs  charset.rs  frontend.rs  generator.rs  mod.rs  optimizer.rs  regex.rs
crates/ruf4/: Cargo.toml  build.rs
crates/ruf4/src/: action.rs  draw.rs  fileops.rs  job.rs  lib.rs  main.rs  panel.rs  platform.rs  preview.rs  settings.rs  sftp.rs  smb.rs  state.rs  theme.rs  vfs.rs
crates/ruf4/src/lsh/: mod.rs
crates/ruf4/tests/: test_action.rs  test_fileops.rs  test_job.rs  test_panel.rs  test_sftp.rs  test_smb.rs  test_state.rs  test_vfs.rs
crates/stdext/src/: float.rs
crates/stdext/src/arena/: debug.rs  fs.rs  scratch.rs
crates/stdext/src/collections/: string.rs  vec.rs
crates/stdext/src/simd/: memset.rs
crates/stdext/src/sys/: unix.rs  windows.rs
crates/tui/: Cargo.toml
crates/tui/src/: buffer.rs  clipboard.rs  document.rs  framebuffer.rs  helpers.rs  input.rs  lib.rs  tui.rs  vt.rs
crates/tui/src/simd/: lines_bwd.rs  lines_fwd.rs  memchr2.rs  mod.rs
crates/tui/src/sys/: unix.rs  windows.rs
crates/tui/src/unicode/: measurement.rs  mod.rs
resources/icons/: ruf4.icns
resources/macos/: Info.plist
resources/windows/: ruf4.rc
scripts/: package-macos.py  sign-windows.py
