[package]
name = "ruf4-tui"
version = "0.1.0"
description = "TUI framework for ruf4, derived from Microsoft Edit"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
stdext.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Time",
]
